--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,32 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo"></Button>
-    <ImageView android:id="@+id/imageView1" android:layout_height="wrap_content" android:src="@drawable/icon" android:layout_width="wrap_content"></ImageView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo"></Button>
+        <Button android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/crop"></Button>
+        <ImageButton
+            android:id="@+id/bigger"
+            android:layout_width="50px"
+            android:scaleType="centerCrop"
+            android:layout_height="50px"
+            android:src="@drawable/bigger" />
+        <ImageButton
+            android:id="@+id/smaller"
+            android:layout_width="50px"
+            android:scaleType="centerCrop"
+            android:layout_height="50px"
+            android:src="@drawable/smaller" />
+        <ImageButton
+            android:id="@+id/ok"
+            android:layout_width="50px"
+            android:scaleType="centerCrop"
+            android:layout_height="50px"
+            android:src="@drawable/ok" />
+
+    </LinearLayout>
+    <ImageView android:id="@+id/imageView1" android:layout_height="match_parent" android:src="@drawable/icon" android:layout_width="match_parent"></ImageView>
 
 </LinearLayout>
